[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/menu/core/panel/GameSubMenuWithOptions.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/ui/menu-change.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/ui/menu/core/panel/GameMenuSelection.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/core/panel/GameSubMenu.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_left = 2.0
expand_margin_right = 1.0

[node name="GameSubMenuWithOptions" instance=ExtResource( 4 )]
script = ExtResource( 1 )

[node name="Label" parent="Title/Back/HBoxContainer" index="1"]
text = "button_back"

[node name="VBoxContainer" type="HBoxContainer" parent="." index="2"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Menu" type="MarginContainer" parent="VBoxContainer" index="0"]
margin_right = 250.0
margin_bottom = 556.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="Scroll" type="ScrollContainer" parent="VBoxContainer/Menu" index="0"]
margin_top = 20.0
margin_right = 250.0
margin_bottom = 536.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="GameMenuSelection" parent="VBoxContainer/Menu/Scroll" index="0" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 250.0
margin_bottom = 516.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer" index="1"]
margin_left = 254.0
margin_right = 258.0
margin_bottom = 556.0
custom_styles/separator = SubResource( 1 )

[node name="Panels" type="Control" parent="VBoxContainer" index="2"]
margin_left = 262.0
margin_right = 1024.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="VBoxContainer/Panels" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="VBoxContainer/Panels/Margin" index="0"]
margin_top = 20.0
margin_right = 762.0
margin_bottom = 536.0

[node name="Panels" type="MarginContainer" parent="VBoxContainer/Panels/Margin/Scroll" index="0"]
margin_right = 762.0
margin_bottom = 516.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 10

[node name="PanelChange" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 2 )
bus = "Sfx"

[connection signal="button_selected" from="VBoxContainer/Menu/Scroll/GameMenuSelection" to="." method="_on_GameMenuSelection_button_selected"]
